# -*- Mode:Makefile -*-

##########################################################################
#                                                                        #
#  Avango Software, Copyright 2001 - 2007 Fraunhofer Gesellschaft        #
#  zur Foerderung der angewandten Forschung (FhG), Munich, Germany.      #
#                                                                        #
#  Avango Software (both binary and source code - if released) is        #
#  intellectual property owned by FhG and copyrighted by FhG worldwide.  #
#                                                                        #
#  Avango is a trademark owned by FhG.                                   #
#                                                                        #
##########################################################################

ACLOCAL_AMFLAGS = -I config/m4macros

SUBDIRS = \
	src \
	dist \
	include \
	$(NULL)

avangoensembledocsdir = $(datadir)/doc/$(PACKAGE_NAME)-$(PACKAGE_VERSION)

avangoensembledocs_DATA = \
	AUTHORS \
	COPYING \
	ChangeLog \
	NEWS \
	README \
	$(NULL)

EXTRA_DIST = \
	bootstrap \
	$(NULL)
